[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Astro/Astro.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Levels/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MainState/Starting.gd" type="Script" id=4]
[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemies/FireBallGenerator.tscn" type="PackedScene" id=6]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="World" parent="." instance=ExtResource( 2 )]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="Astro" parent="." instance=ExtResource( 1 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Starting" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="FireBallGenerator" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 39, 0 )

[connection signal="win" from="World" to="." method="_on_World_win"]
[connection signal="fall" from="Astro" to="." method="reset_position"]
